# types-singleton-decorator

./: .gitignore  CHANGELOG.md  HOW_TO_FIX.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  publish.sh  pyproject.toml  readme.md  setup.sh
.github/workflows/: build.yml
singleton_decorator-stubs/: __init__.pyi
tests/: test_static_types.py  test_typing.py
