[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "types-singleton-decorator"
version = "0.1.0"
description = "Type stubs for singleton_decorator"
authors = [
    {name = "Rohit Raj"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
keywords = ["typing", "stubs", "singleton", "decorator"]

[project.urls]
Homepage = "https://github.com/rohitshubham/types-singleton-decorator"
Repository = "https://github.com/rohitshubham/types-singleton-decorator"
Issues = "https://github.com/rohitshubham/types-singleton-decorator/issues"

[tool.hatch.build.targets.wheel]
packages = ["singleton_decorator-stubs"]

[tool.hatch.build.targets.sdist]
include = [
    "/singleton_decorator-stubs",
    "/README.md",
    "/pyproject.toml",
]
